--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.0.2",
     "express": "~4.1.1",
     "jade": "^1.9.2",
+    "lodash": "^3.3.1",
     "mongoose": "^3.8.23"
   },
   "devDependencies": {
