--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "express": "~4.1.1",
     "jade": "^1.9.2",
     "lodash": "^3.3.1",
-    "mongoose": "^3.8.23"
+    "mongoose": "^3.8.23",
+    "password-hash": "^1.2.2",
+    "serve-static": "^1.9.1"
   },
   "devDependencies": {
     "mocha": "~1.18",
