--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "~1.0.2",
+    "consolidate": "^0.11.0",
     "express": "~4.1.1",
-    "jade": "^1.9.2",
+    "handlebars": "^3.0.0",
     "lodash": "^3.3.1",
     "mongoose": "^3.8.23",
     "password-hash": "^1.2.2",
