--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "frontend",
   "main": "index.js",
   "scripts": {
-    "test": "mocha-phantomjs test"
+    "test": "mocha --reporter list"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,11 @@
     "nodemon": "~1.3.7",
     "phantomjs": "^1.9.15",
     "sinon": "~1.9.1"
+  },
+  "dependencies": {
+    "backbone": "^1.1.2",
+    "backbone.marionette": "^2.4.0",
+    "jquery": "^2.1.3",
+    "underscore": "^1.8.2"
   }
 }
