--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "backbone": "^1.1.2",
     "backbone.marionette": "^2.4.0",
     "jquery": "^2.1.3",
+    "require": "^2.4.17",
     "underscore": "^1.8.2"
   }
 }
