--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -12,5 +12,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "require-handlebars-plugin": "~0.11.2"
+  }
 }
