--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "backbone.marionette": "^2.4.0",
     "jquery": "^2.1.3",
     "require": "^2.4.17",
+    "requirejs": "^2.1.16",
     "underscore": "^1.8.2"
   }
 }
